@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-controller.sh,v 1.2 2005/04/06 14:07:11 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-controller.sh,v 1.3 2005/04/06 23:23:57 rocket Exp $
 
 . ${clst_sharedir}/targets/support/functions.sh
 
@@ -39,16 +39,6 @@ case $1 in
 		cp ${clst_sharedir}/livecd/files/gentoo.png \
 			${clst_chroot_path}/usr/share/faces
 
-		# touch /etc/startx if our livecd/type requires it
-		if [ "${clst_livecd_type}" = "gentoo-release-environmental" ] \
-		|| [ "${clst_livecd_type}" = "gentoo-gamecd" ]
-		then
-			touch ${clst_chroot_path}/etc/startx
-		fi
-		
-		# now, finalize and tweak the livecd fs (inside of the chroot)
-		exec_in_chroot  ${clst_sharedir}/targets/support/livecdfs-update.sh
-
 		# execute gamecdfs-update.sh if we're a gamecd
 		if [ "${clst_livecd_type}" = "gentoo-gamecd" ]
 		then
@@ -59,9 +49,10 @@ case $1 in
 				echo "gamecd/conf is required for a gamecd!"
 				exit 1
 			fi
-			exec_in_chroot ${clst_sharedir}/targets/support/gamecdfs-update.sh
-			rm -f ${clst_chroot_path}/tmp/gamecd.conf
 		fi
+		
+		# now, finalize and tweak the livecd fs (inside of the chroot)
+		exec_in_chroot  ${clst_sharedir}/targets/support/livecdfs-update.sh
 		
 		# if the user has their own fs update script, execute it
 		if [ -n "${clst_livecd_fsscript}" ]
